Fix item name overflow pushing itemMenuBtn outside div when name reaches max length

--- a/src/components/itemsPage/Items.Page.module.scss
+++ b/src/components/itemsPage/Items.Page.module.scss
@@ -55,6 +55,7 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    gap: .2rem;
 
                     .itemInputContainer {
                         display: flex;
@@ -62,7 +63,8 @@
                         justify-content: start;
                         align-items: center;
                         width: 100%;
-                        gap: .5rem;
+                        gap: inherit;
+                        overflow: hidden;
     
                         .itemCompletedToggle {
                             justify-content: center;
@@ -111,12 +113,16 @@
                             display: flex;
                             justify-content: center;
                             align-items: right;
+                            flex-shrink: 0;
+                            white-space: nowrap;
                         }
     
                         .itemQuantityType {
                             height: 100%;
                             font-size: 1.2rem;
                             font-weight: bolder;
+                            flex-shrink: 0;
+                            white-space: nowrap;
                         }
                     }
 
